# TelegramBotForSupport

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: config.py  logging.py  main.py
app/api/: dependencies.py
app/api/routes/: health.py  tasks.py
app/bots/: control_bot.py  intake_bot.py
app/bots/handlers/: common.py
app/bots/handlers/control/: create_task.py  help.py  list_tasks.py  menu.py  menu_actions.py  task_actions.py  user_management.py
app/bots/keyboards/: control_menu.py  task_actions.py
app/db/: session.py
app/db/models/: __init__.py  audit_log.py  invite_token.py  task.py  task_data.py  user.py
app/repositories/: audit.py  invite_tokens.py  tasks.py  users.py
app/schemas/: common.py  invite.py  payloads.py  task.py
app/services/: audit_service.py  invite_service.py  mtg_rotation_service.py  pds_payload_service.py  permission_service.py  presentation_service.py  state_machine.py  task_service.py  validation_service.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_invite_created_at.py
scripts/: deploy_tpbot.sh
tests/: conftest.py  test_invite_token_flow.py  test_invite_token_usage.py  test_issue_new_creation.py  test_mtg_rotation_service.py  test_owner_bootstrap.py  test_pds_payload_generation.py  test_permissions.py  test_status_transitions.py  test_task_transition_idempotency.py  test_validation_service.py
tests/e2e/: test_telegram_issue_new_flow.py
(+3 files in other folders)
