[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "tp-bot"
version = "0.1.0"
description = "TP Bot — Card Management & PDS Assisted RPA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.13,<4",
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "sqlalchemy[asyncio]>=2.0.35,<3",
  "asyncpg>=0.29,<1",
  "alembic>=1.13,<2",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-dotenv>=1.0,<2",
  "email-validator>=2.2,<3",
  "greenlet>=3.0,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
  "httpx>=0.27,<1",
  "aiosqlite>=0.20,<1",
  "telethon>=1.36,<2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = [
  "e2e: real Telegram end-to-end tests (run only with explicit env credentials)",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]
